--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ name = "_core"
 crate-type = ["cdylib"]
 
 [dependencies]
-nalgebra = "0.33.2"
+anyhow = "1.0.98"
+ndarray = "0.16.1"
+ndarray-rand = "0.15.0"
 # "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
 # "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
 pyo3 = { version = "0.22.4", features = ["extension-module", "abi3-py39"] }
